--- a/RegisterLogin/app/src/main/res/layout/content_login.xml
+++ b/RegisterLogin/app/src/main/res/layout/content_login.xml
@@ -27,6 +27,33 @@
         android:layout_gravity="center_horizontal"
         android:hint="Password"/>
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText3"
+        android:inputType="date"
+        android:layout_gravity="center_horizontal"
+        android:hint="dd-mm-yyyy"/>
+
+    <RadioGroup
+        android:id="@+id/radiousertype"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+
+        <RadioButton
+            android:id="@+id/radioTeacher"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Teacher"
+            android:checked="true" />
+
+        <RadioButton
+            android:id="@+id/radioStudent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Student" />
+
+    </RadioGroup>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,10 +62,7 @@
         android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal" />
 
-    <TextView
-        android:id="@+id/raw"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+
 
 
 </LinearLayout>
